--- a/export/package.json
+++ b/export/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "build-package",
+  "name": "angular-module-builder-cli",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -10,6 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:package": "ts-node --fast -P export --type-check export/src"
+  },
+  "bin": {
+    "amb": "./lib/index.js"
   },
   "dependencies": {
     "@angular/animations": "^5.2.0",
@@ -53,7 +56,6 @@
     "rollup-plugin-node-resolve": "^3.0.3",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
-    "uglify-js": "^3.3.11"
+    "typescript": "~2.5.3"
   }
 }
