--- a/export/package.json
+++ b/export/package.json
@@ -3,59 +3,25 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:package": "ts-node --fast -P export --type-check export/src"
+    "build": "rm -rf lib && tsc && cp src/common/inline-resources.js lib/common/inline-resources.js",
+    "build:package": "ts-node --fast --type-check"
   },
   "bin": {
-    "amb": "./lib/index.js"
+    "amb": "lib/index.js"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
-    "@angular/cli": "~1.7.0",
     "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
     "@types/camelcase": "^4.1.0",
     "@types/fs-extra": "^5.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/ora": "^1.3.1",
     "camelcase": "^4.1.0",
     "chalk": "^2.3.1",
-    "clear": "^0.0.1",
-    "codelyzer": "^4.0.1",
     "fs-extra": "^5.0.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "ora": "^1.4.0",
-    "protractor": "~5.1.2",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.3",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   }
 }
