--- a/src/lib/my-module/tsconfig-es2015.json
+++ b/src/lib/my-module/tsconfig-es2015.json
@@ -6,17 +6,19 @@
     "module": "es2015",
     "target": "es2015",
     "noImplicitAny": false,
-    "outDir": "../../../dist/packages-dist/my-module/es2015",
+    "outDir": "{dir}/es2015",
     "rootDir": ".",
     "sourceMap": true,
     "inlineSources": true,
     "declaration": false,
-    "removeComments": true,
     "strictNullChecks": true,
-    "lib": ["es2015", "dom"],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "paths": { }
+    "paths": {}
   },
   "files": [
     "index.ts"
