--- a/export/package.json
+++ b/export/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-module-builder-cli",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.4",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf lib && tsc && cp src/common/inline-resources.js lib/common/inline-resources.js",
@@ -10,6 +10,7 @@
     "amb": "lib/index.js"
   },
   "dependencies": {
+    "@angular/compiler": "^5.2.0",
     "@angular/compiler-cli": "^5.2.0",
     "@types/camelcase": "^4.1.0",
     "@types/fs-extra": "^5.0.0",
@@ -18,10 +19,14 @@
     "camelcase": "^4.1.0",
     "chalk": "^2.3.1",
     "fs-extra": "^5.0.0",
+    "gzip-size": "^4.1.0",
     "ora": "^1.4.0",
+    "pretty-size": "^2.0.0",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.3",
-    "ts-node": "~4.1.0",
+    "uglify-js": "^3.3.11"
+  },
+  "devDependencies": {
     "typescript": "~2.5.3"
   }
 }
