--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "camelcase": "^4.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -37,11 +38,11 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/ora": "^1.3.1",
-    "camelcase": "^4.1.0",
     "chalk": "^2.3.1",
     "clear": "^0.0.1",
     "codelyzer": "^4.0.1",
     "fs-extra": "^5.0.0",
+    "gzip-size": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -51,6 +52,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass-tilde-importer": "^1.0.1",
     "ora": "^1.4.0",
+    "pretty-size": "^2.0.0",
     "protractor": "~5.1.2",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.3",
