--- a/export/package.json
+++ b/export/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-module-builder-cli",
-  "version": "0.0.2-beta.8",
+  "version": "0.0.2-beta.9",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf lib && tsc && cp src/common/inline-resources.js lib/common/inline-resources.js",
@@ -22,6 +22,7 @@
     "gzip-size": "^4.1.0",
     "ora": "^1.4.0",
     "pretty-size": "^2.0.0",
+    "replace-in-file": "^3.1.1",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.3",
     "uglify-js": "^3.3.11"
