--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ora": "^1.4.0",
     "pretty-size": "^2.0.0",
     "protractor": "~5.1.2",
+    "replace-in-file": "^3.1.1",
     "rollup": "^0.56.1",
     "rollup-plugin-node-resolve": "^3.0.3",
     "ts-node": "~4.1.0",
